--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
+    "minimist": "^1.2.5",
     "postcss": "^8.1.10",
     "sass": "^1.29.0",
     "through2": "^4.0.2",
